Update: PATCH /solution/for-student/:id - save new files and delete existing ones
